--- a/views/iniciar-sesion.ejs
+++ b/views/iniciar-sesion.ejs
@@ -10,7 +10,7 @@
       <input type="password" name="password" placeholder="********">
     </div>
     <div class="campo enviar">
-      <input type="submit" class="btn btn-rosa" value="Crear Cuenta">
+      <input type="submit" class="btn btn-rosa" value="Iniciar Sesion">
     </div>
   </form>
 </main>
